# ai-cli

./: LICENSE  README.md  ai.py  setup.cfg  setup.py
bedrock/: bedrock.py
src/ai/: ai.py
src/ai/bedrock/: bedrock.py
src/ai/utils/: helpers.py
utils/: helpers.py
