[metadata]
name = ai-cli
version = 1.0

[options]
packages = find:
install_requires =
  Click
  requests
  bs4
  PyPDF2
  nltk
  transformers
  boto3 @ file:///Users/ekenstam/code/v2/ai-cli/requirements/boto3-1.28.21-py3-none-any.whl
  botocore @ file:///Users/ekenstam/code/v2/ai-cli/requirements/botocore-1.31.21-py3-none-any.whl

[options.entry_points]
console_scripts =
    ai = ai:cli

